# python-environment-variable

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/environment_variable/: __init__.py  boolean.py  environment_variable.py  exceptions.py
tests/: test_boolean.py  test_environment_variable.py
