[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=9"]
build-backend = "setuptools.build_meta"

[project]
name = "environment-variable"
description = "Open-source package for loading environment variables easier and in a Pythonic way"
dynamic = [
    "version",
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
respect-gitignore = true
src = [
    "src",
    "tests",
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[dependency-groups]
dev = [
    "ipython",
    "pre-commit",
    "pytest>7",
    "ruff==0.15.2",
    "setuptools_scm>=8.0",
]
