[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=9"]
build-backend = "setuptools.build_meta"

[project]
name = "environment-variable"
description = "Open-source package for loading environment variables easier and in a Pythonic way"
dynamic = [
    "version",
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
addopts = "--cov=src/environment_variable --cov-report=term:skip-covered"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
respect-gitignore = true
src = ["src"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[dependency-groups]
dev = [
    "ipython",
    "pre-commit",
    "ruff==0.15.2",
    "setuptools_scm>=8.0",
    { include-group = "test" },
]

test = [
    "pytest-cov",
    "pytest>=8",
]

[tool.setuptools_scm]
# Technically unnecessary, but avoids a warning message.
